@@ -1,3 +1,5 @@
+* Limit size of field when possible
+* Add xalign and yalign as fields attributes
 * Convert many popup to be no-modal
 * Add window manager for:
     - replace current window
